--- a/src/client/scss/sections/apply.scss
+++ b/src/client/scss/sections/apply.scss
@@ -10,6 +10,7 @@
   font-size: 2em;
   font-weight: 600;
   letter-spacing: -0.04em;
+  line-height: 52px;
   color: #ffffff;
   margin: 0;
 }
@@ -18,6 +19,7 @@
   font-weight: 500;
   color: #fffefe;
   opacity: 0.6;
+  line-height: 25px;
   margin: 0;
 }
 .aside {
@@ -88,6 +90,9 @@
     .applicant_info_box {
       padding: 40px 50px;
       border-bottom: 1px solid $xdsVeryDarkBg;
+      .apply_descriptor {
+        margin-top: 20px;
+      }
     }
     .applicant_info {
       @extend .applicant_info_box;
@@ -100,6 +105,7 @@
       }
       span {
         @extend .apply_descriptor;
+        margin: 0px 0px 0px 2%;
         color: #979797;
       }
     }
@@ -112,11 +118,13 @@
         margin: 5% 0%;
         label {
           @extend .apply_descriptor;
+          width: 18%;
           color: #fff;
           opacity: 1;
         }
       }
       input {
+        width: 80%;
         height: 62px;
         padding: 0 20px;
         background: $xdsGreyBlue;
@@ -131,6 +139,7 @@
         outline: none;
       }
       textarea {
+        width: 80%;
         height: 154px;
         padding: 0 20px;
         background: $xdsGreyBlue;
@@ -147,27 +156,42 @@
       }
       p {
         @extend .apply_descriptor;
-        opacity: 1;
-        color: #fff;
         text-align: center;
       }
-      .column_input {
-        @extend .labeled_input;
-        flex-direction: column;
-        align-items: flex-start;
-        p {
-          padding: 20px 0px;
+      .column_inputs {
+        margin-top: 20px;
+        .column_input {
+          @extend .labeled_input;
+          flex-direction: column;
+          align-items: flex-start;
+          margin: 0;
+          .apply_descriptor {
+            opacity: 1;
+            padding: 20px 0px;
+            margin: 0;
+            color: #fff;
+          }
+          input {
+            width: 100%;
+          }
+          .form_date {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .date_input {
+              width: 30%;
+            }
+            /* Chrome, Safari, Edge, Opera */
+            input::-webkit-inner-spin-button {
+              -webkit-appearance: none;
+              margin: 0;
+            }
+            /* Firefox */
+            input[type=number] {
+              -moz-appearance: textfield;
+            }
+          }
         }
-        input {
-          width: 100%;
-        }
-      }
-      .form_date {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin: 5% 0%;
       }
     }
   }
@@ -220,7 +244,7 @@
   }
 }
 .form_btn-wrap {
-  margin-top: 20px;
+  margin-top: 28px;
   width: 100%;
   display: flex;
   align-items: center;
