--- a/src/client/scss/sections/footer.scss
+++ b/src/client/scss/sections/footer.scss
@@ -2,19 +2,24 @@
   width: 100%;
   height: 252px;
   background: $xdsGreyBlue;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  .container.wrap {
-    padding-top: 10px;
+  .footer_links {
     max-width: 770px;
-    width: 100%;
+    padding: 0px 15px;
+    margin: 0 auto;
   }
   ul {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 50px;
+    @media (max-width: $screen-md) {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    @media (max-width: $screen-sm) {
+      padding-top: 10px;
+    }
     li {
       transition: $transition;
       list-style: none;
@@ -22,6 +27,15 @@
         &:hover {
           transform: scale(1.2);
         }
+        @media (max-width: $screen-sm) {
+          transform: scale(0.7);
+          &:hover {
+            transform: scale(0.9);
+          }
+        }
+      }
+      @media(max-width: $screen-md) {
+        margin: 10px;
       }
       a {
         font-family: Poppins;
@@ -36,21 +50,26 @@
         transition: $transition;
         &:hover {
           color: $xdsAccent;
-          
+        }
+        @media (max-width: $screen-sm) {
+          font-size: 0.9em;
         }
       }
     }
   }
 }
 .copyright {
+  margin: 75px 0px 30px 0px;
   p {
-    font-family: Poppins;
+    text-align: center;
     font-size: 15px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 14px;
     letter-spacing: 0em;
-
     color: rgba(255, 255, 255, 0.55);
+    @media (max-width: $screen-sm) {
+      font-size: 0.8em;
+    }
   }
 }
