--- a/src/client/scss/all.scss
+++ b/src/client/scss/all.scss
@@ -5,7 +5,16 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.xds_section {
+  width: 100%;
+  max-width: 1030px;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
 .info_box {
+  @extend .xds_section;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
@@ -15,5 +24,33 @@ html, body {
   border-radius: 22px;
   background-color: $xdsVeryDarkBg;
   padding: 53px;
-  width: 80%;
+}
+
+.section_title {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 52px;
+  letter-spacing: -0.04em;
+  color: #ffffff;
+  margin-top: 110px;
+}
+
+.medium_title {
+  font-size: 2em;
+  font-weight: 700;
+  letter-spacing: -0.04em;
+  line-height: 52px;
+  color: #ffffff;
+  margin: 0;
+}
+
+.medium_descriptor {
+  font-size: 1.4em;
+  font-weight: 600;
+  letter-spacing: -0.04em;
+  color: #fffefe;
+  opacity: 0.6;
+  line-height: 25px;
+  margin: 0;
 }
