--- a/src/client/scss/sections/pools.scss
+++ b/src/client/scss/sections/pools.scss
@@ -1,28 +1,21 @@
 .pools {
   background-color: $xdsGreyBlue;
-  padding: 50px 0px;
-  @media screen and (max-width: 1900px){
-    padding: 80px 0px;
-  }
+  width: 80%;
+  margin: 0 auto;
+}
+.all_pools_btn {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-}
-.pools_section {
-  padding: 20px 180px;
-  @media screen and (max-width: 1900px){
-    padding: 30px 80px;
-  }
-}
-.pools_section_title {
-  font-family: Poppins;
-  font-size: 40px;
+  width: 227px;
+  height: 68px;
+  margin: 50px auto;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 700;
-  line-height: 52px;
-  letter-spacing: -0.04em;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: -0.02em;
   color: #ffffff;
-  margin: 0px 0px 35px 0px;
 }
 .pools_blocks {
   width: 100%;
@@ -32,23 +25,29 @@
   align-items: flex-start;
 }
 .pool_block {
-  margin-top: 2%;
+  margin-top: 65px;
   max-width: 402px;
   min-height: 344px;
+  padding: 0px 15px;
   background: $xdsVeryDarkBg;
   border: 2px solid $xdsAccent;
   backdrop-filter: blur(4px);
   border-radius: $xdsBorderRadius;
-  padding: 2% 1.5%;
+  @media (max-width: $screen-lg) {
+    max-width: 100%;
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 .pool_block_title {
   display: flex;
-  padding: 0px 0px 10px 10px;
+  align-items: center;
+  margin-top: 10px;
+  padding: 0px 20px;
   img {
     margin-right: 10px;
   }
   h4 {
-    font-family: Poppins;
     font-size: 25px;
     font-style: normal;
     font-weight: 600;
@@ -61,18 +60,26 @@
   background: $xdsGreyBlue;
   border-radius: 10px;
   margin: 0 auto;
-  height: 161px;
-  padding: 15px 20px 10px 20px;
+  padding: 10px 20px;
 }
 .pool_info_top {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
 }
+.pool_info_top.nonvoting {
+  height: 40px;
+}
+.progress_bar_container {
+  width: 100%;
+}
+.progress_bar_container.voting {
+  width: 100%;
+  padding-right: 15px;
+}
 .progress_bar_wrap {
-  width: 276px;
+  width: 100%;
   height: 10px;
   background: #122026;
   border-radius: 100px;
@@ -87,7 +94,6 @@
     background: $xdsAccent;
     border-radius: 100px;
     p {
-      font-family: Poppins;
       font-size: 11px;
       font-style: normal;
       font-weight: 500;
@@ -102,7 +108,6 @@
     top: -22px;
     right: 0px;
     span {
-      font-family: Poppins;
       font-size: 8px;
       font-style: normal;
       font-weight: 500;
@@ -113,7 +118,7 @@
   }
 
   // second progress
-  .progres_bar-green {
+  .progress_bar_green {
     position: absolute;
     width: 16px;
     height: 10px;
@@ -122,7 +127,7 @@
     background: $xdsAccent;
     border-radius: 100px;
   }
-  .progres_bar-red {
+  .progress_bar_red {
     position: absolute;
     width: 16px;
     height: 10px;
@@ -145,7 +150,6 @@
       margin-top: -8px;
     }
     p {
-      font-family: Poppins;
       font-size: 8px;
       font-style: normal;
       font-weight: 500;
@@ -156,9 +160,8 @@
   }
   .yes {
     position: absolute;
-    top: -8px;
+    top: 11px;
     left: 0;
-    font-family: Poppins;
     font-size: 11px;
     font-style: normal;
     font-weight: 500;
@@ -167,34 +170,26 @@
     color: #ffffff;
   }
   .no {
-    position: absolute;
-    top: -8px;
+    @extend .yes;
     right: 0;
-    font-family: Poppins;
-    font-size: 11px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 52px;
-    letter-spacing: -0.04em;
-    color: #ffffff;
+    left: auto;
   }
 }
-
+.pool_like_container {
+  width: 41px;
+}
 .pool_like {
   width: 40.29px;
   height: 40.29px;
   background: $xdsAccent;
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   border: none;
-  margin-left: 15px;
   position: relative;
   span {
     position: absolute;
     bottom: -40px;
-    font-family: Poppins;
     font-size: 11px;
     font-style: normal;
     font-weight: 500;
@@ -211,20 +206,25 @@
   align-items: flex-start;
   width: 100%;
   span {
-    font-family: Poppins;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
     letter-spacing: -0.04em;
     color: $xdsAccent;
+    @media (max-width: $screen-sm) {
+      font-size: 15px;
+    }
   }
   p {
-    font-family: Poppins;
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
     letter-spacing: -0.04em;
     color: #ffffff;
+    color: #ffffff;
+    @media (max-width: $screen-sm) {
+      font-size: 10px;
+    }
   }
 }
 .pool_links {
@@ -234,6 +234,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  @media (max-width: $screen-sm) {
+    flex-direction: column;
+    align-items: center;
+  }
   .pool_share {
     width: 120px;
     display: flex;
@@ -248,7 +252,6 @@
     }
   }
   button {
-    font-family: Poppins;
     font-size: 13px;
     font-style: normal;
     font-weight: 500;
@@ -256,18 +259,8 @@
     color: #ffffff;
     width: 127px;
     height: 51px;
+    @media (max-width: $screen-sm) {
+      margin: 10px 0;
+    }
   }
-}
-.all_pools_btn {
-  width: 227px;
-  height: 68px;
-  margin: 0 auto;
-  margin-top: 50px;
-  font-family: Poppins;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 17px;
-  letter-spacing: -0.02em;
-  color: #ffffff;
 }
