--- a/src/client/scss/variables/global.scss
+++ b/src/client/scss/variables/global.scss
@@ -28,6 +28,7 @@ $xdsVeryDarkBg: #16272f;
 $xdsAccent: #3fc6c1;
 $xdsAccentBorder: 2px solid $xdsAccent;
 $xdsBorderRadius: 22px;
+$xdsBorderColor: #17504E;
 
 // position flex
 %flex-col {
@@ -81,7 +82,7 @@ $transition1s: 1s;
   box-shadow: 0px 10px 20px rgba(62, 198, 193, 0.1);
   border-radius: 100px;
   transition: $transition;
-  border: 1px solid #17504E;
+  border: 1px solid $xdsBorderColor;
   cursor: pointer;
   &_scnd {
     border: 2px solid rgb(63, 198, 193);
