--- a/src/client/scss/sections/detail_card.scss
+++ b/src/client/scss/sections/detail_card.scss
@@ -210,6 +210,9 @@
         grid-template-columns: 50% 50%;
         grid-template-rows: 33% 34% 33%;
       }
+      @media (max-width: $screen-sm) {
+        grid-template-columns: 100%;
+      }
       .important_link_block {
         display: flex;
         flex-direction: column;
@@ -218,8 +221,8 @@
         background-color: $xdsGreyBlue;
         border-radius: 22px;
         margin: 5%;
-        height: 8vw;
-        padding: 10px;
+        height: 110px;
+        padding: 5%;
         overflow: hidden;
         a {
           font-size: 0.8em;
