Create dev view to whitelist investor addresses,; connect invest function to buy button

--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -18,3 +18,4 @@
 @import "sections/footer.scss";
 @import "sections/header.scss";
 @import "sections/litepaper.scss";
+@import "sections/dev.scss";
