--- a/src/client/scss/style.scss
+++ b/src/client/scss/style.scss
@@ -14,6 +14,7 @@
 @import "sections/action_call.scss";
 @import "sections/apply.scss";
 @import "sections/detail_card.scss";
+@import "sections/buy_modal.scss";
 @import "sections/disclaimer.scss";
 @import "sections/footer.scss";
 @import "sections/header.scss";
