--- a/src/client/scss/sections/apply.scss
+++ b/src/client/scss/sections/apply.scss
@@ -168,7 +168,7 @@
       textarea {
         width: 80%;
         height: 154px;
-        padding: 0 20px;
+        padding: 10px;
         background: $xdsGreyBlue;
         border: 1px solid #606061;
         box-sizing: border-box;
