...and fix the fix

--- a/src/client/scss/sections/apply.scss
+++ b/src/client/scss/sections/apply.scss
@@ -114,6 +114,9 @@
         }
         .label_container {
           width: 18%;
+          @media (max-width: $screen-xlg) {
+            width: 100%;
+          }
           p {
             text-align: left;
           }
